www/mediawiki - update to 1.15.5 and switch ui_msg to notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@70059 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/mediawiki/Portfile
+++ b/dports/www/mediawiki/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                mediawiki
-version             1.15.4
+version             1.15.5
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          www php
 maintainers         blb openmaintainer
@@ -18,9 +18,9 @@ platforms           darwin freebsd
 homepage            http://www.mediawiki.org
 master_sites        http://download.wikimedia.org/mediawiki/${branch}/
 
-checksums           md5     9c37dee8addc27b2051ee2eebc238b4d \
-                    sha1    c00267663a0a05ace4bd28b53b0b3b0f08dad551 \
-                    rmd160  f4879c0f9cb1b8a6f5682f9fad14010703d49c27
+checksums           md5     01c4c85fb96991d962c8acb3d892ec2d \
+                    sha1    b157fe37bb89c78e5ffa0f27b14beb886db3a5f4 \
+                    rmd160  5113beb1df46c56275a90d5a1cb85c2b01ca541f
 
 depends_run         port:libiconv port:jpeg port:jasper port:tiff port:lcms \
                     port:libpng port:freetype port:libxml2 port:jbigkit \
@@ -43,23 +43,28 @@ destroot {
    eval file copy [glob ${worksrcpath}/*] ${destroot}${docpath}
 }
 
+notes "\
+MediaWiki has now been installed into ${docpath}.  Any further information \
+on installation and configuration can be found at:
+
+   http://www.mediawiki.org/wiki/Manual:Installation_guide
+
+If you are upgrading, read:
+
+   http://www.mediawiki.org/wiki/Manual:Upgrading
+
+For a new install, make sure ${docpath}/AdminSettings.php has correct \
+information.
+
+For an upgrade, ${docpath}/AdminSettings.php will not be modified, so make \
+sure it is correct and anything in ${docpath}/AdminSettings.sample which you \
+need, has been copied to ${docpath}/AdminSettings.php.
+"
+
 post-activate {
-   ui_msg "MediaWiki has now been installed into ${docpath}"
-   ui_msg "Any further information on installation and configuration can"
-   ui_msg "be found at"
-   ui_msg "http://www.mediawiki.org/wiki/Manual:Installation_guide"
-   ui_msg ""
-   ui_msg "If you are upgrading, read"
-   ui_msg "http://www.mediawiki.org/wiki/Manual:Upgrading"
-   ui_msg ""
    if {![file exists ${docpath}/AdminSettings.php]} {
       xinstall -m 660 ${docpath}/AdminSettings.sample \
          ${docpath}/AdminSettings.php
-      ui_msg "Make sure ${docpath}/AdminSettings.php has correct information"
-   } else {
-      ui_msg "${docpath}/AdminSettings.php has not been touched, make sure"
-      ui_msg "it is correct and anything in ${docpath}/AdminSettings.sample"
-      ui_msg "needed has been copied to it"
    }
 }
 
