--- a/dports/textproc/texinfo/Portfile
+++ b/dports/textproc/texinfo/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name            texinfo
 version         4.13
-revision        1
+revision        2
 categories      textproc
 platforms       darwin
 maintainers     vinc17 openmaintainer
@@ -40,8 +40,19 @@ post-destroot {
     file delete -force ${destroot}${prefix}/lib/charset.alias
 }
 
-post-activate   { system "mktexlsr" }
-post-deactivate { system "mktexlsr" }
+post-activate {
+    if { [file exists ${prefix}/bin/mktexlsr] } {
+        ui_msg "Running ${prefix}/bin/mktexlsr"
+        system "${prefix}/bin/mktexlsr"
+    }
+}
+
+post-deactivate {
+    if { [file exists ${prefix}/bin/mktexlsr] } {
+        ui_msg "Running ${prefix}/bin/mktexlsr"
+        system "${prefix}/bin/mktexlsr"
+    }
+}
 
 # We need to support names like 'texinfo-4.8a.tar.bz2'.
 livecheck.type      regex
