texinfo: updated long_description to mention the relation with texlive and added a comment about mktexlsr.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70066 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/texinfo/Portfile
+++ b/dports/textproc/texinfo/Portfile
@@ -14,7 +14,9 @@ long_description        Texinfo is the official documentation format of the \
                 in a number of formats, both online and printed (dvi, info, \
                 html, xml, etc.). This means that instead of writing \
                 different documents for online information and another for \
-                a printed manual, you need write only one document.
+                a printed manual, you need write only one document. Some \
+                features need texlive (unnecessary if only the info command \
+                is used).
 homepage        http://www.gnu.org/software/texinfo/
 master_sites    gnu
 use_lzma        yes
@@ -39,6 +41,11 @@ pre-destroot {
 post-destroot {
     file delete -force ${destroot}${prefix}/lib/charset.alias
 }
+
+# mktexlsr is provided by texlive-bin (and needed only if texlive-bin
+# is installed). texlive-bin may be installed/uninstalled independently
+# of texinfo (but not at the same time, unless a locking mechanism is
+# provided). The use of a variant would not be flexible enough.
 
 post-activate {
     if { [file exists ${prefix}/bin/mktexlsr] } {
