py25-altgraph, py26-altgraph: update to 0.7.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@70067 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-altgraph/Portfile
+++ b/dports/python/py26-altgraph/Portfile
@@ -5,7 +5,7 @@ PortSystem			1.0
 PortGroup python26 1.0
 
 name				py26-altgraph
-version				0.6.7
+version             0.7.0
 categories-append	devel
 license             MIT
 maintainers			jmr openmaintainer
@@ -18,19 +18,17 @@ long_description \
 	enhancements related to modulegraph and macholib.
 
 platforms			darwin
-if {[info exists supported_archs]} {
-    supported_archs noarch
-}
+supported_archs     noarch
 
 homepage			http://undefined.org/python/#altgraph
 master_sites		http://pypi.python.org/packages/source/a/altgraph/
 distname			altgraph-${version}
 
-checksums			md5 6792e11b471e70ab3d4dfecf41fb759e \
-					sha1 880627405473520b336f771fa529dab52fb3e1fb \
-					rmd160 dac7a7a81fe80a4aa08de60dcf0ddcd7cbdb1690
+checksums			md5 e9d5a034fc80773e264724b2c2a10de3 \
+					sha1 07c26e1f802d07ab5d87ea1d3866f4bc4396745a \
+					rmd160 d958f9b44bde14d744bf2bec4b5fb9367ccedb0a
 
-depends_lib-append	port:py26-distribute
+depends_lib	        port:py26-distribute
 
 livecheck.type  regex
 livecheck.url   http://pypi.python.org/pypi/altgraph/
