--- a/dports/python/py26-modulegraph/Portfile
+++ b/dports/python/py26-modulegraph/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup python26  1.0
 
 name                py26-modulegraph
-version             0.7.3
+version             0.8
 categories-append   devel
 license             MIT
 maintainers         jmr openmaintainer
@@ -18,9 +18,7 @@ long_description \
     extensive knowledge of special cases, and is extensible.
 
 platforms           darwin
-if {[info exists supported_archs]} {
-    supported_archs noarch
-}
+supported_archs     noarch
 
 homepage            http://undefined.org/python/#modulegraph
 master_sites        http://pypi.python.org/packages/source/m/modulegraph/
@@ -28,11 +26,11 @@ distname            modulegraph-${version}
 
 conflicts           py26-modulegraph-devel
 
-depends_lib-append  port:py26-altgraph
+depends_lib         port:py26-altgraph
 
-checksums           md5 ba3bf16397001f4f6997a7f5c102542f \
-                    sha1 aef09401faef1f952d2ba2a2d3f52528dceb0053 \
-                    rmd160 a6828d9ba8ebca5663f9837beeccafc6a319c99d
+checksums           md5 0d58849fa86f2d950578a2738ce19d9e \
+                    sha1 01b272403227162005ffab06aadb4cffdd3e0e6b \
+                    rmd160 1e45346ac4df4a6082f2dec49c94af81cfc86cca
 
 livecheck.type  regex
 livecheck.url   http://pypi.python.org/pypi/modulegraph
