--- a/dports/python/py25-macholib/Portfile
+++ b/dports/python/py25-macholib/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 PortGroup           python25 1.0
 
 name                py25-macholib
-version             1.2.1
-revision            1
+version             1.3
 categories-append   devel
 license             MIT
 maintainers         jmr openmaintainer
@@ -20,9 +19,7 @@ long_description \
     python code that is platform and endian independent.
 
 platforms       darwin
-if {[info exists supported_archs]} {
-    supported_archs noarch
-}
+supported_archs noarch
 
 homepage        http://undefined.org/python/#macholib
 master_sites    http://pypi.python.org/packages/source/m/macholib/
@@ -30,15 +27,11 @@ distname        macholib-${version}
 
 conflicts       py25-macholib-devel
 
-depends_lib-append  path:${python.pkgd}/modulegraph/__init__.py:py25-modulegraph
+depends_lib     path:${python.pkgd}/modulegraph/__init__.py:py25-modulegraph
 
-# patch taken from <http://mail.python.org/pipermail/pythonmac-sig/2009-December/021998.html>
-patchfiles      macholib-lp64.diff
-patch.pre_args  -p1
-
-checksums       md5 7f7f44e62a057d19b92e813fb2f3d05b \
-                sha1 bbe56f3b03ee5b431f34fb66cf22993587687ef8\
-                rmd160 fa408bc5f1f3f58c0ff3ab43eb56f644bd6b83fa
+checksums       md5 3677cddb286a63e017d4dd1ea407cd45 \
+                sha1 7bdcfac8ea06c534a1d83e01d778448f54918143\
+                rmd160 34d963b1ed60d090b1e8b1658a4ac353655fd1b3
 
 livecheck.type  regex
 livecheck.url   http://pypi.python.org/pypi/macholib/
