--- a/dports/python/py26-sphinx/Portfile
+++ b/dports/python/py26-sphinx/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-sphinx
-version             1.0
+version             1.0.1
 categories-append   textproc devel
 license             BSD
 maintainers         jmr openmaintainer
@@ -24,14 +24,13 @@ homepage            http://sphinx.pocoo.org/
 master_sites        http://pypi.python.org/packages/source/S/Sphinx/
 distname            Sphinx-${version}
 
-checksums           md5 173baed4a71355fc3c908da1f6ab4156 \
-                    sha1 7e492abb6e95de427fc1d33643f0bf276be10c3e \
-                    rmd160 f95895a29a825edf5043c880870ea6ea5243ddcf
+checksums           md5 d3a57ffcf2592da494aeca4b62e815ef \
+                    sha1 e4648d9d07e914c56f16fd50f1ef8f095e23dd01 \
+                    rmd160 5d51c055f4b3f6702ced18f51087601be38dea82
 
 depends_lib         port:py26-docutils
 depends_run         port:py26-pygments \
-                    port:py26-jinja2 \
-                    port:py26-distribute
+                    port:py26-jinja2
 
 livecheck.type      regex
 livecheck.regex     {<p>Current version: <b>([0-9.]+)</b></p>}
