ffmpeg: update to stable version 0.6     * add license information     * update variants to reflect changes in licensing     * add speex support by default     * disable broken jack indev     * update long description
git-svn-id: https://svn.macports.org/repository/macports/trunk@70077 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -7,8 +7,8 @@ PortGroup xcodeversion 1.0
 name            ffmpeg
 conflicts       ffmpeg-devel
 epoch           1
-version         0.5.1
-revision        2
+version         0.6
+license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
 
@@ -32,6 +32,9 @@ long_description        FFmpeg is a complete solution to record, convert and \
                         ffplay is a simple media player based on SDL and on \
                         the ffmpeg libraries. \
                         \
+                        ffprobe gathers information from multimedia streams and \
+                        prints it in human- and machine-readable fashion. \
+                        \
                         libavcodec is a library containing all the ffmpeg \
                         audio/video encoders and decoders. Most codecs were \
                         developped from scratch to ensure best performances \
@@ -46,14 +49,12 @@ master_sites    http://www.ffmpeg.org/releases/
 
 use_bzip2       yes
 
-checksums           md5     c7b0e1729f7aafb10496d79bb963bb26 \
-                    sha1    ab29dbfc7510e34e47b491279533d2f8c18efc38 \
-                    rmd160  9765798cabbf937f97ca7137b4ab398df5a4ec47
+checksums       md5     d6142a9a5821d6a6262a6edb903faa24 \
+                sha1    c130e3bc368251b9130ce6eafb44fe8c3993ff5c \
+                rmd160  1ff6a8f419239a03d84f67cc954f60f73632432a
 
-patchfiles      patch-libavfilter-avfilter.h.diff \
-                patch-libswscale-Makefile.diff \
+patchfiles      patch-libswscale-Makefile.diff \
                 patch-libswscale-swscale.h.diff
-
 
 use_parallel_build yes
 
@@ -67,6 +68,7 @@ depends_lib     port:lame \
                 port:schroedinger \
                 port:faac \
                 port:faad2 \
+                port:speex \
                 port:XviD \
                 port:x264 \
                 path:lib/pkgconfig/sdl.pc:libsdl \
@@ -83,7 +85,6 @@ minimum_xcodeversions {9 3.1}
 
 configure.cflags-append    -DHAVE_LRINTF ${configure.cppflags}
 configure.args \
-        --disable-vhook \
         --enable-gpl \
         --enable-postproc \
         --enable-swscale --enable-avfilter --enable-avfilter-lavf \
@@ -95,9 +96,11 @@ configure.args \
         --enable-libfaad \
         --enable-libxvid \
         --enable-libx264 \
+        --enable-libspeex \
         --enable-nonfree \
         --mandir=${prefix}/share/man \
         --enable-shared --enable-pthreads \
+        --disable-indevs \
         --cc=${configure.cc}
 
 #add --enable-libopenjpeg when problems with openjpeg.h are resolved
@@ -125,9 +128,8 @@ post-destroot {
 platform darwin 10 {
     # ticket #20938 -- disable mmx for 32 bit intel only
     if { $build_arch == "i386" } {
-        if { ![variant_isset no_gpl] } {
-            configure.args-delete --enable-swscale
-        }
+        # swscale is no longer GPL only
+        configure.args-delete --enable-swscale
         if { ![variant_isset no_mmx] } {
             configure.args-append --disable-mmx --disable-mmx2 --disable-sse --disable-ssse3 --disable-amd3dnow --disable-amd3dnowext
         }
@@ -148,71 +150,76 @@ variant no_mmx description {disable all x86 asm optimizations} {
 variant no_gpl description {disallow use of GPL code, license will be LGPL} {
     configure.args-delete   --enable-gpl
     configure.args-delete   --enable-postproc
-    configure.args-delete   --enable-swscale
     configure.args-delete   --enable-libfaad
     depends_lib-delete      port:faad2
     configure.args-delete   --enable-libx264
-    depends_build-delete      port:x264
+    depends_build-delete    port:x264
     configure.args-delete   --enable-libxvid
     depends_lib-delete      port:XviD
 }
 
-#
-# make speex a variant since it requires speex version 1.2
-# which is currently only available via port speex-devel
-# remove variant and make default when 1.2 is available in speex
-#
-
-variant speex description {enable Speex decoding via libspeex} {
-    configure.args-append   --enable-libspeex
-    depends_lib-append      path:lib/libspeex.dylib:speex-devel
+variant no_nonfree description {disallow use of nonfree code, libraries and binaries will be redistributable under GPL/LGPL} {
+    configure.args-delete   --enable-nonfree
+    configure.args-delete   --enable-libfaac
+    depends_lib-delete      port:faac
 }
 
-pre-configure {
-    if {[variant_isset speex]} {
-        if {![file exists ${prefix}/lib/libspeexdsp.dylib]} {
-            error "
-*******
-******* Variant speex requires port speex-devel but
-******* port speex is active.  Please deactivate port speex
-******* and install/activate port speex-devel then try
-******* again.
-*******
-"
-        }
-    }
+#
+# jack indev support is currently broken
+# since Darwin doesn't support memory based POSIX semaphores
+# only named ones
+#
+
+variant jack description {Enable jack input device support (currently broken)} {
+    configure.args-delete --disable-indevs
+    depends_lib-append port:jack
 }
 
 post-activate {
-    if {![variant_isset no_gpl]} {
+    if {![variant_isset no_nonfree]} {
+        ui_msg "
+*******
+******* This build of ${name} includes nonfree code as follows:
+*******
+*******     libfaac
+*******
+******* The following libraries and binaries may not be redistributed:
+*******
+*******     ffmpeg
+*******     libavcodec
+*******     libavdevice
+*******     libavfilter
+*******     libavformat
+*******     libavutil
+*******
+******* To remove this restriction use variant +no_nonfree
+*******
+"
+    } elseif {![variant_isset no_gpl]} {
         ui_msg "
 *******
 ******* This build of ${name} includes GPLed code and
-******* is therefore licensed under GPL.
+******* is therefore licensed under GPL v2.1 or later.
 *******
 ******* The following modules are GPLed:
 *******
 *******      postproc
-*******      swscale
 *******      libfaad
 *******      libx264
 *******      libxvid
 *******
-******* To include only LGPLed code use variant +no_gpl
+******* To include only LGPLed code use variant +no_gpl +no_nonfree
 *******
 "
     } else {
         ui_msg "
 *******
-******* This build of ${name} includes no GPLed
-******* code and is therefore licensed under LGPL.
+******* This build of ${name} includes no GPLed or nonfree
+******* code and is therefore licensed under LGPL v2.1 or later.
 *******
 "
     }
 }
-#
-#disable livecheck
-#
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
