--- a/dports/perl/p5-inline/Portfile
+++ b/dports/perl/p5-inline/Portfile
@@ -2,8 +2,7 @@
 
 PortSystem			1.0
 PortGroup			perl5 1.0
-perl5.setup			Inline 0.44
-revision			2
+perl5.setup			Inline 0.46
 maintainers			nomaintainer
 description			Write Perl subroutines in other programming languages
 long_description \
@@ -14,7 +13,9 @@ long_description \
 
 platforms			darwin
 
-checksums			md5 840f47d9b6cef39e68370faf9dceab2c
+checksums           md5     4c2f14829fbe83cb456e9c5c0dac06b3 \
+                    sha1    b1718517bdd4a9dd4603c9a35a2575e7958440a4 \
+                    rmd160  dffc15351730722e6899953517e9673b0a4dd2ff
 
 depends_lib-append			port:p5-parse-recdescent
 
@@ -24,4 +25,3 @@ if {[info exists supported_archs]} {
     universal_variant no
 }
 
-patchfiles			patch-C-Makefile.PL
