--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -6,9 +6,10 @@ PortGroup xcodeversion 1.0
 
 name            ffmpeg-devel
 conflicts       ffmpeg
-set svn_rev     22866
-set swscale_rev 31034
+set svn_rev     23429
+set swscale_rev 31301
 version         ${svn_rev}
+license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
 
@@ -23,8 +24,7 @@ long_description \
                 libavcodec version 52. This development release reflects those \
                 changes and may break applications coded to libavcodec version 51. \
                 \
-                For the last valid revision for libavcodec version 51 (r15261) \
-                please use port ffmpeg.
+                For the current stable version of ffmpeg please use port ffmpeg.
 
 homepage        http://www.ffmpeg.org/
 master_sites
@@ -41,6 +41,7 @@ depends_lib     port:lame \
                 port:libvorbis \
                 port:libogg \
                 port:libtheora \
+                port:speex \
                 port:dirac \
                 port:schroedinger \
                 port:faac \
@@ -97,6 +98,7 @@ configure.args \
         --enable-libfaad \
         --enable-libxvid \
         --enable-libx264 \
+        --enable-libspeex \
         --mandir=${prefix}/share/man \
         --enable-shared --enable-pthreads \
         --disable-indevs \
@@ -128,9 +130,8 @@ post-destroot {
 platform darwin 10 {
     # ticket #20938 -- disable for 32 bit intel only
     if { $build_arch == "i386" } {
-        if { ![variant_isset no_gpl] } {
-            configure.args-delete --enable-swscale
-        }
+        configure.args-delete --enable-swscale
+
         if { ![variant_isset no_mmx] } {
             configure.args-append --disable-mmx --disable-mmx2 --disable-sse --disable-ssse3 --disable-amd3dnow --disable-amd3dnowext
         }
@@ -144,7 +145,6 @@ variant no_mmx description {disable all x86 asm optimizations} {
 variant no_gpl description {disallow use of GPL code, license will be LGPL if +no_nonfree is selected} {
     configure.args-delete   --enable-gpl
     configure.args-delete   --enable-postproc
-    configure.args-delete   --enable-swscale
     configure.args-delete   --enable-libfaad
     depends_lib-delete      port:faad2
     configure.args-delete   --enable-libx264
@@ -157,32 +157,6 @@ variant no_nonfree description {disallow use of nonfree code, libraries and bina
     configure.args-delete   --enable-nonfree
     configure.args-delete   --enable-libfaac
     depends_lib-delete      port:faac
-}
-
-#
-# make speex a variant since it requires speex version 1.2
-# which is currently only available via port speex-devel
-# remove variant and make default when 1.2 is available in speex
-#
-
-variant speex description {enable Speex decoding via libspeex} {
-    configure.args-append   --enable-libspeex
-    depends_lib-append      path:lib/libspeex.dylib:speex-devel
-}
-
-pre-configure {
-    if {[variant_isset speex]} {
-        if {![file exists ${prefix}/lib/libspeexdsp.dylib]} {
-            error "
-*******
-******* Variant speex requires port speex-devel but
-******* port speex is active.  Please deactivate port speex
-******* and install/activate port speex-devel then try
-******* again.
-*******
-"
-        }
-    }
 }
 
 #
@@ -220,12 +194,11 @@ post-activate {
         ui_msg "
 *******
 ******* This build of ${name} includes GPLed code and
-******* is therefore licensed under GPL.
+******* is therefore licensed under GPL 2.1 or later.
 *******
 ******* The following modules are GPLed:
 *******
 *******      postproc
-*******      swscale
 *******      libfaad
 *******      libx264
 *******      libxvid
@@ -237,7 +210,7 @@ post-activate {
         ui_msg "
 *******
 ******* This build of ${name} includes no GPLed or nonfree
-******* code and is therefore licensed under LGPL.
+******* code and is therefore licensed under LGPL 2.1 or later.
 *******
 "
     }
