ffmpeg-devel: update description.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70086 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -13,18 +13,17 @@ license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
 
-description     Digital VCR and streaming server (new unstable API/ABI libavcodec version 52)
+description     Digital VCR and streaming server (recent unstable version from svn trunk)
 
 long_description \
-                FFmpeg is a complete solution to record, convert and \
-                stream audio and video. It includes libavcodec, the \
-                leading audio/video codec library. \
+                FFmpeg is a complete solution to record, convert and stream audio and \
+                video. It includes libavcodec, the leading audio/video codec library. \
                 \
-                FFmpeg is currently undergoing major changes in its API/ABI in \
-                libavcodec version 52. This development release reflects those \
-                changes and may break applications coded to libavcodec version 51. \
+                This is a recent unstable build of ffmpeg taken from svn trunk and as \
+                such may contain new or changed functionality and/or API/ABI changes \
+                relative to the latest stable release. \
                 \
-                For the current stable version of ffmpeg please use port ffmpeg.
+                For the current stable version of ffmpeg, please use port ffmpeg.
 
 homepage        http://www.ffmpeg.org/
 master_sites
