--- a/dports/devel/glib2-devel/Portfile
+++ b/dports/devel/glib2-devel/Portfile
@@ -6,7 +6,7 @@ PortGroup                   archcheck 1.0
 name                        glib2-devel
 conflicts                   glib2
 set my_name                 glib
-version                     2.25.11
+version                     2.25.12
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
 maintainers                 ryandesign
@@ -27,14 +27,13 @@ long_description            Glib is a library which includes support routines \
 master_sites                gnome:sources/${my_name}/${branch}/ \
                             ftp://ftp.gtk.org/pub/${my_name}/${branch}/
 
-checksums                   md5     19f76d17ca65f70f9b36daf8b1e57673 \
-                            sha1    3794dac04e4a4c5dabf2452d1d7e98b3d0c83edb \
-                            rmd160  a949384227eaa7491c2fa903d84771ea3be00215
+checksums                   md5     c709d78fb794e0ec2090cd41dfee244a \
+                            sha1    d6f61c562cd7e3afbf4bf8bc17212f62156c1ff4 \
+                            rmd160  764b875d1c0cedb0eb8f2d22955f2338003f22d4
 
 # ${prefix}/include/glib-2.0/glib/gi18n.h requires -I${prefix}/include to find libintl.h
 # See http://trac.macports.org/changeset/27148
-patchfiles                  patch-configure.in.diff \
-                            patch-configure.in-dtrace.diff \
+patchfiles                  patch-configure.ac.diff \
                             patch-glib-2.0.pc.in.diff \
                             patch-glib_gunicollate.c.diff \
                             patch-gi18n.h.diff \
