science/nds2-client: fix homepage, description, and licence (unspecified)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70094 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/nds2-client/Portfile
+++ b/dports/science/nds2-client/Portfile
@@ -7,15 +7,14 @@ version       0.6.5
 categories    science
 platforms     darwin
 maintainers   ram
-license       GPL
 
 description   Network Data Server Client
 long_description \
-  LIGO Scientific Collaboration Algorithm Library containing core \
-  routines for gravitational wave data analysis.
+  Client tool for accessing streamed LIGO data using the Network \
+  Data Server version 2.
 
-homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lalsuite.html
-master_sites  http://www.ligo.caltech.edu/~jzweizig/nds2-release
+homepage      http://www.ligo.caltech.edu/~jzweizig/nds2-release
+master_sites  ${homepage}
 
 checksums     md5 c9c7e645b9a768633b77d0026464e236 \
               sha1 faaa1c906cea638f438faf6066a27832ff520f1b \
