texlive-bin: do not build against icu port if installed (#25772):  - -L should be removed from ldflags rather than cppflags  - set CPLUS_INCLUDE_PATH in addition to C_INCLUDE_PATH
git-svn-id: https://svn.macports.org/repository/macports/trunk@70095 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-bin/Portfile
+++ b/dports/tex/texlive-bin/Portfile
@@ -7,7 +7,7 @@ PortGroup       archcheck 1.0
 
 name            texlive-bin
 version         2009
-revision        4
+revision        5
 
 categories      tex
 maintainers     dports
@@ -114,8 +114,9 @@ configure.args  --mandir=${prefix}/share/man \
                 --disable-xindy
 
 configure.cppflags-delete   -I${prefix}/include
-configure.cppflags-delete   -L${prefix}/lib
+configure.ldflags-delete    -L${prefix}/lib
 configure.env-append        C_INCLUDE_PATH=${prefix}/include
+configure.env-append        CPLUS_INCLUDE_PATH=${prefix}/include
 configure.env-append        LIBRARY_PATH=${prefix}/lib
 
 # work around bug in texlive makefiles where $OBJC is not recorded
