--- a/dports/python/py25-tz/Portfile
+++ b/dports/python/py25-tz/Portfile
@@ -6,7 +6,7 @@ PortGroup       python25 1.0
 
 name            py25-tz
 set my_name     pytz
-version         2010h
+version         2010k
 categories      python devel
 platforms       darwin
 if {[info exists supported_archs]} {
@@ -25,9 +25,9 @@ master_sites    http://cheeseshop.python.org/packages/source/p/pytz/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     3c24fd25971b730d6db0426487a21ae0 \
-                sha1    807f09daf610b0e9e8d1d7ffec61a0631f35ea2c \
-                rmd160  a95fb1effe3cf95854bea30c093d3d06959a9235
+checksums       md5     f63890cc071d369e06e6e82ad31bfca2 \
+                sha1    314388ea23b9347fd9955ed2801560512b25fa80 \
+                rmd160  15445e40b7448aa46956cc424ad438fbc3b0b255
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}-${version}
