gettext: disable native java compilation to fix universal builds when a java compiler is opportunistically found; see #25681
git-svn-id: https://svn.macports.org/repository/macports/trunk@70100 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gettext/Portfile
+++ b/dports/devel/gettext/Portfile
@@ -6,7 +6,7 @@ PortGroup               archcheck 1.0
 
 name                    gettext
 version                 0.18.1.1
-revision                1
+revision                2
 categories              devel
 maintainers             ryandesign
 license                 GPLv3
@@ -28,6 +28,7 @@ patchfiles              patch-gettext-tools-Makefile.in
 configure.cppflags      -no-cpp-precomp
 
 configure.args          --disable-csharp \
+                        --disable-native-java \
                         --without-emacs \
                         --with-included-gettext \
                         --with-included-glib \
