NMU upgrade from 1.0.0 to 2.6.0, closes #23401
git-svn-id: https://svn.macports.org/repository/macports/trunk@70102 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/parrot/Portfile
+++ b/dports/lang/parrot/Portfile
@@ -3,8 +3,7 @@
 PortSystem              1.0
 
 name                    parrot
-version                 1.0.0
-revision                1
+version                 2.6.0
 categories              lang devel
 maintainers             bfulgham coleda.com:will
 description             Open source virtual machine (for Perl6 et al.)
@@ -19,9 +18,9 @@ platforms               darwin
 homepage                http://www.parrot.org/
 master_sites            ftp://ftp.parrot.org/pub/parrot/releases/stable/${version}/
 
-checksums               md5 649ce1fb7c0edaf89dc1cd52ff267b1a \
-                        sha1 9e028f5fff38a332c13ad4389652a016d7a824f7 \
-                        rmd160 46f60accd33f16cc910f4ea03840badc358d22c7
+checksums               md5     a8e0d723797dc4ff3d6551d03814204a \
+                        sha1    e7de16241d00690bef161f9904dfbb8e68f85b2c \
+                        rmd160  9bc413f1d4e016de72ea0eaa98ae7e087bb5d9e0
 
 depends_build           bin:perl:perl5
 depends_lib             port:gmp port:icu
@@ -45,8 +44,9 @@ post-destroot {
     set docdir ${destroot}${prefix}/share/doc/${name}
 
     set executables {
-        parrot parrot_config parrot_debugger
-        pbc_disassemble pbc_info pbc_merge pbc_to_exe pbc_dump
+        ops2c parrot-nqp parrot_config parrot_nci_thunk_gen
+        pbc_dump pbc_to_exe parrot parrot-prove parrot_debugger
+        pbc_disassemble pbc_merge
     }
 
     foreach exe $executables {
