* configure with the correct --mandir so dependent ports   which pick up the mandir through parrot_config install   their man pages in a proper location * install parrot straight into ${prefix}, so documentation,   man pages (again) and other files are in the expected   locations
git-svn-id: https://svn.macports.org/repository/macports/trunk@70103 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/parrot/Portfile
+++ b/dports/lang/parrot/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    parrot
 version                 2.6.0
+revision                1
 categories              lang devel
 maintainers             bfulgham coleda.com:will
 description             Open source virtual machine (for Perl6 et al.)
@@ -26,18 +27,18 @@ depends_build           bin:perl:perl5
 depends_lib             port:gmp port:icu
 
 configure.cmd           perl Configure.pl
-configure.pre_args      --prefix=${prefix}/lib/parrot
-configure.args          --optimize
+configure.pre_args      --prefix=${prefix} \
+                        --mandir=${prefix}/share/man \
+                        --optimize
 
 destroot.target         install
+destroot.args           DESTDIR=${destroot}
 
 build.type              gnu
 build.target
 
 test.run                yes
 test.target             test
-
-destroot.destdir        PREFIX=${destroot}${prefix}/lib/parrot
 
 post-destroot {
     set bindir ${destroot}${prefix}/bin
@@ -52,13 +53,10 @@ post-destroot {
     foreach exe $executables {
         # fixup the library path
         set old_path "${workpath}/parrot-${version}/blib/lib/libparrot.dylib"
-        set new_path "${prefix}/lib/parrot/lib/libparrot.${version}.dylib"
+        set new_path "${prefix}/lib/libparrot.${version}.dylib"
 
-        system "cd ${prefix}/lib/parrot/bin && \
+        system "cd ${bindir} && \
             install_name_tool -change \"$old_path\" \"$new_path\" ${exe}"
-
-        # install into the common area.
-        system "cd ${bindir} && ln -sf ${prefix}/lib/parrot/bin/${exe}"
     }
     xinstall -m 755 -d ${docdir}
 }
