inkscape: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70106 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/inkscape/Portfile
+++ b/dports/graphics/inkscape/Portfile
@@ -89,6 +89,5 @@ post-patch {
 }
 
 livecheck.type          regex
-livecheck.url           http://sourceforge.net/export/rss2_projfiles.php?project=${name}
-livecheck.regex         <title>${name} (\[0-9.\]+) released.*</title>
-
+livecheck.url           http://sourceforge.net/projects/inkscape/files/inkscape/
+livecheck.regex         "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
