wireshark-devel: update to 1.4.0rc2 (#25863) and also install headers (#25809)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70107 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark-devel/Portfile
+++ b/dports/net/wireshark-devel/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            wireshark-devel
-version         1.4.0rc1
+version         1.4.0rc2
 categories      net
 maintainers     gmail.com:hsivank
 description     Graphical network analyzer and capture tool
@@ -22,9 +22,9 @@ master_sites    http://www.wireshark.org/download/src/ \
 
 use_bzip2       yes
 
-checksums       md5     ca5ee30ed798900142d9cd4d81637b58 \
-                sha1    35978e507966d18fefcf63f8746dbd31d2cb94ac \
-                rmd160  0518fe9acf84867360086acb3dde930f0862dae7
+checksums       md5     2c79bdb62e44260898dd16c663343d95 \
+                sha1    592580662e0c868999d6643a24fc3b9841e05321 \
+                rmd160  cb20ccd71f5c8bf0abb4edd662306f82932efab7
 
 conflicts       wireshark
 
@@ -111,4 +111,19 @@ variant no_gui description {Disable GTK GUI} {
 variant libsmi {
         depends_lib-append port:libsmi
         configure.args-append --with-libsmi
+}
+
+post-destroot {
+        xinstall -d ${destroot}${prefix}/include/wireshark/epan/crypt/ \
+                    ${destroot}${prefix}/include/wireshark/epan/dfilter/ \
+                    ${destroot}${prefix}/include/wireshark/epan/dissectors/ \
+                    ${destroot}${prefix}/include/wireshark/epan/ftypes/ \
+                    ${destroot}${prefix}/include/wireshark/wiretap/
+        xinstall -m 644 -W ${worksrcpath}/ color.h config.h register.h ${destroot}${prefix}/include/wireshark/
+        eval xinstall -m 644 [glob ${worksrcpath}/epan/*.h] ${destroot}${prefix}/include/wireshark/epan/
+        eval xinstall -m 644 [glob ${worksrcpath}/epan/crypt/*.h] ${destroot}${prefix}/include/wireshark/epan/crypt/
+        eval xinstall -m 644 [glob ${worksrcpath}/epan/dfilter/*.h] ${destroot}${prefix}/include/wireshark/epan/dfilter/
+        eval xinstall -m 644 [glob ${worksrcpath}/epan/dissectors/*.h] ${destroot}${prefix}/include/wireshark/epan/dissectors/
+        eval xinstall -m 644 [glob ${worksrcpath}/epan/ftypes/*.h] ${destroot}${prefix}/include/wireshark/epan/ftypes/
+        eval xinstall -m 644 [glob ${worksrcpath}/wiretap/*.h] ${destroot}${prefix}/include/wireshark/wiretap/
 }
