--- a/dports/www/rtmpdump/Portfile
+++ b/dports/www/rtmpdump/Portfile
@@ -38,5 +38,6 @@ destroot {
     xinstall -m 755 -W ${worksrcpath} rtmpdump rtmpsuck rtmpsrv rtmpgw ${destroot}${prefix}/bin
 }
 
+livecheck.url       [lindex ${master_sites} 0]
 livecheck.type      regex
-livecheck.regex     ${name}-(\[0-9a-z.\]+)\\.tar
+livecheck.regex     ${name}-(\[0-9a-z.\]+)\\.
