--- a/dports/textproc/dblatex/Portfile
+++ b/dports/textproc/dblatex/Portfile
@@ -63,3 +63,7 @@ post-destroot {
 post-activate {
     system "${prefix}/bin/mktexlsr"
 }
+
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/projects/${name}/files/
+livecheck.regex     /${name}-(\[0-9.\]+)/
