dejavu-fonts is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70128 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/dejavu-fonts/Portfile
+++ b/dports/x11/dejavu-fonts/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                dejavu-fonts
 version             2.31
+revision            1
 categories          x11 fonts
 maintainers         takanori openmaintainer
 description         The DejaVu fonts are a font family based on the Vera Fonts.
@@ -19,6 +20,8 @@ use_bzip2           yes
 checksums           rmd160 6ebae58d2a913f5690f0be6a8dd92a42a5ef45e5
 
 depends_run         port:fontconfig
+
+supported_archs     noarch
 
 use_configure       no
 
