--- a/dports/graphics/metapixel/Portfile
+++ b/dports/graphics/metapixel/Portfile
@@ -27,8 +27,7 @@ checksums               md5     af5d77d38826756af213a08e3ada9941 \
                         sha1    f917aec91430b1bdbcc7b3dea29cb93f15a04c77 \
                         rmd160  7343c66e925e5b55cfe63624be18159717b1295e
 
-depends_lib             port:perl5 \
-                        port:jpeg \
+depends_lib             port:jpeg \
                         port:giflib \
                         port:libpng
 
