--- a/dports/sysutils/zeroinstall-injector/Portfile
+++ b/dports/sysutils/zeroinstall-injector/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name		zeroinstall-injector
 version		0.41.1
+revision	1
 platforms	darwin freebsd linux
 categories	sysutils
 maintainers	afb
@@ -35,6 +36,11 @@ build.target		build
 
 destroot.cmd	${prefix}/bin/python2.5 setup.py
 destroot.destdir	--prefix=${prefix} --skip-build --root=${destroot}
+
+post-destroot   {
+	reinplace "s|/usr/bin/env python|${prefix}/bin/python2.5|" \
+	          ${destroot}${prefix}/lib/python2.5/site-packages/zeroinstall/0launch-gui/0launch-gui
+}
 
 livecheck.name	zero-install
 livecheck.distname	injector
