dblatex: add missing tex module dependencies (#25872), turn off python.link_binaries
git-svn-id: https://svn.macports.org/repository/macports/trunk@70141 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/dblatex/Portfile
+++ b/dports/textproc/dblatex/Portfile
@@ -34,7 +34,8 @@ checksums           md5     6f37cb117f0a04a71c050b09804cfab7 \
 use_bzip2           yes
 
 depends_lib         port:python26 \
-                    bin:latex:texlive \
+                    port:texlive-latex-extra \
+                    port:texlive-math-extra \
                     port:dejavu-fonts \
                     port:ImageMagick \
                     port:docbook-xml \
@@ -44,6 +45,7 @@ destroot.cmd        ${python.bin} setup.py
 destroot.destdir    --root=${destroot} \
                     --catalogs==${destroot}${prefix}/etc/xml/catalog
 
+python.link_binaries no
 post-destroot {
     reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${python.prefix}/bin/dblatex
 
