upgrade to 1.2.10 and install header files. resolves #25809 (headers) and #25869 (update and headers) header install diff is basically the patch from #25809, changed to install the   headers pre-destroot rather than post-destroot.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70145 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark/Portfile
+++ b/dports/net/wireshark/Portfile
@@ -2,8 +2,8 @@
 
 PortSystem 1.0
 name		wireshark
-version		1.2.9
-revision	1
+version		1.2.10
+revision	0
 categories	net
 maintainers	darkart.com:opendarwin.org
 description	Graphical network analyzer and capture tool
@@ -18,9 +18,10 @@ long_description A network analyzer that lets you capture and \
 master_sites	http://www.wireshark.org/download/src/			\
 		http://www.wireshark.org/download/src/all-versions/
 
-checksums           md5     a4240c36f1e668d85b703eacb7c0a95e \
-                    sha1    6b31173a34c0050035516958e0b3ae83e83eac2c \
-                    rmd160  d93be031cf01922dd1b23151f9a4c2581a99b1bf
+checksums           md5     f8bc926956c13fcddb4df0601011ceef \
+                    sha1    db9028d6c547fb736f126a0cd0659222094b4c1b \
+                    rmd160  15fd1087b7f817902da50d49a819773dfd589a85
+ 
 
 use_bzip2	yes
 
@@ -50,6 +51,22 @@ configure.args	--enable-gtk2 \
 		--disable-warnings-as-errors
 
 configure.ldflags-append "-Wl,-search_paths_first"
+
+pre-destroot {
+	xinstall -d ${destroot}${prefix}/include/wireshark/epan/crypt/
+	xinstall -d ${destroot}${prefix}/include/wireshark/epan/dfilter/
+	xinstall -d ${destroot}${prefix}/include/wireshark/epan/dissectors/
+	xinstall -d ${destroot}${prefix}/include/wireshark/epan/ftypes/
+	xinstall -d ${destroot}${prefix}/include/wireshark/wiretap/
+	xinstall -m 755 -W ${worksrcpath}/ color.h config.h register.h ${destroot}${prefix}/include/wireshark/
+	eval xinstall -m 755 [glob ${worksrcpath}/epan/*.h] ${destroot}${prefix}/include/wireshark/epan/
+	eval xinstall -m 755 [glob ${worksrcpath}/epan/crypt/*.h] ${destroot}${prefix}/include/wireshark/epan/crypt/
+	eval xinstall -m 755 [glob ${worksrcpath}/epan/dfilter/*.h] ${destroot}${prefix}/include/wireshark/epan/dfilter/
+	eval xinstall -m 755 [glob ${worksrcpath}/epan/dissectors/*.h] ${destroot}${prefix}/include/wireshark/epan/dissectors/
+	eval xinstall -m 755 [glob ${worksrcpath}/epan/ftypes/*.h] ${destroot}${prefix}/include/wireshark/epan/ftypes/
+	eval xinstall -m 755 [glob ${worksrcpath}/wiretap/*.h] ${destroot}${prefix}/include/wireshark/wiretap/
+}
+
 
 # port:libpcap is !universal_variant
 universal_variant   no
