gmp: fix "configure: WARNING: unrecognized options: --disable-dependency-tracking" when building universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70153 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gmp/Portfile
+++ b/dports/devel/gmp/Portfile
@@ -37,6 +37,8 @@ patchfiles      patch-gmp-h.in.diff
 configure.args  --infodir=${prefix}/share/info \
                 --enable-cxx
 
+configure.universal_args-delete --disable-dependency-tracking
+
 # if CFLAGS and CXXFLAGS are undefined, configure script tries to build fastest library for build machine.
 # On PowerPC machines, CFLAGS must be empty to get -force_cpusubtype_ALL.
 configure.cc_archflags
