--- a/dports/kde/kdelibs4/Portfile
+++ b/dports/kde/kdelibs4/Portfile
@@ -61,7 +61,7 @@ configure.args-append   ../${distname} \
                         -DLIBXSLT_LIBRARIES=${prefix}/lib/libxslt.dylib \
                         -DLIBEXSLT_LIBRARIES=${prefix}/lib/libexslt.dylib \
                         -DJASPER_INCLUDE_DIR=${prefix}/include \
-                        -DJASPER_LIBRARY=${prefix}/lib/libjasper.dylib
+                        -DJASPER_LIBRARY=${prefix}/lib/libjasper.dylib \
                         -DWITH_FAM=OFF
 
 if { [file exists ${destroot}${prefix}/lib/kde4/kspell_aspell.so] } {
