muniversal: fix inability to find nm when cross-compiling (#22224, #23431, #23687, #24477)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70156 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/dbus/Portfile
+++ b/dports/devel/dbus/Portfile
@@ -202,12 +202,10 @@ variant no_root description {Run the DBUS daemon as MacPorts install user.} {
     }
 }
 
-set cross_opts  "ac_cv_have_abstract_sockets=no NM='/usr/bin/nm -p'"
+set cross_opts  "ac_cv_have_abstract_sockets=no"
 if { ${os.arch}=="i386" } {
     if { ${os.major} >= 10 } {
         set merger_configure_env(ppc) ${cross_opts}
-    } else {
-        set merger_configure_env(ppc) "NM='/usr/bin/nm -p'"
     }
     set merger_configure_env(ppc64)   ${cross_opts}
 } else {
