mutt-devel: fix unsubscribing from "malformed" mailboxes, and fix ssl patch to not expect an empty PATCHES file (#25849)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70157 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/mutt-devel/Portfile
+++ b/dports/mail/mutt-devel/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 
 name                mutt-devel
 version             1.5.20
-revision            4
+revision            5
 categories          mail
 platforms           darwin
 maintainers         nomaintainer
@@ -40,6 +40,8 @@ configure.args      --disable-warnings \
 
 default_variants    +pop +imap
 
+
+patchfiles-append   patch-1.5.20.unmailboxes.diff
 
 if {![variant_isset db4] && ![variant_isset qdbm] && ![variant_isset tokyocabinet]} {
         variant_set gdbm
