xmlto: Add missing dependence on fop and dblatex
git-svn-id: https://svn.macports.org/repository/macports/trunk@70159 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/xmlto/Portfile
+++ b/dports/textproc/xmlto/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            xmlto
 version         0.0.23
+revision        1
 categories      textproc
 platforms       darwin
 maintainers     nomaintainer
@@ -35,7 +36,11 @@ depends_run     port:coreutils \
                 port:libxml2 \
                 port:libxslt \
                 port:docbook-xml \
-                port:docbook-xsl
+                port:docbook-xsl \
+                port:fop \
+                port:dblatex
+
+depends_skip_archcheck fop dblatex gindutils coreutils
 
 patchfiles      patch-xmlto.in.diff
 
@@ -47,7 +52,9 @@ configure.env-append \
     PAPER_CONF=${prefix}/bin/paperconf \
     TAIL=${prefix}/bin/gtail \
     XMLLINT=${prefix}/bin/xmllint \
-    XMLTEX=${prefix}/bin/xmltex
+    XMLTEX=${prefix}/bin/xmltex \
+    DBLATEX=${prefix}/bin/dblatex \
+    FOP=${prefix}/bin/fop
 
 build.env-append      XML_CATALOG_FILES=${prefix}/etc/xml/catalog
 
