ruby/rb-nokogiri, rb19-nokogiri: upgrade to 1.4.3.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@70160 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb19-nokogiri/Portfile
+++ b/dports/ruby/rb19-nokogiri/Portfile
@@ -3,7 +3,7 @@
 PortSystem		    1.0
 PortGroup		    ruby 1.0
 
-ruby.setup          nokogiri 1.4.2 gem {} rubygems ruby19
+ruby.setup          nokogiri 1.4.3.1 gem {} rubygems ruby19
 description		    HTML, XML, SAX, & Reader parser with XPath/CSS3 selector searching
 long_description	\
     Nokogiri (鋸) is an HTML, XML, SAX, and Reader parser. Among Nokogiri's \
@@ -11,12 +11,13 @@ long_description	\
     selectors. XML is like violence - if it doesn’t solve your problems, \
     you are not using enough of it.
 license             MIT
+platforms			darwin
 maintainers		    singingwolfboy openmaintainer
 homepage		    http://nokogiri.org/
 categories-append   xml
-checksums           md5     f229d6ce94bc474c7e41e43ece32d4d8 \
-                    sha1    cd14810105332889bbf792cc63f5a49535a9078e \
-                    rmd160  aee3dcfbd5fe08780cbba56e99ab52052de53715
+checksums           md5     36d092a5f40b8dece5b32d434cc73fd2 \
+                    sha1    9e0bcc42efca3f345c04f6383ad216b09c4ed0a1 \
+                    rmd160  01f66e7e2e63b18ab9c4afbf4e3aade2a5c5d704
 
 depends_lib-append  port:libxml2 \
                     port:libxslt
