--- a/dports/x11/wine-devel/Portfile
+++ b/dports/x11/wine-devel/Portfile
@@ -7,8 +7,7 @@ PortGroup                   xcodeversion 1.0
 name                        wine-devel
 conflicts                   wine wine-crossover-games
 set my_name                 wine
-version                     1.2-rc7
-revision                    1
+version                     1.3.0
 license                     LGPL-2.1+
 categories                  x11
 maintainers                 ryandesign jwa openmaintainer
@@ -35,9 +34,9 @@ master_sites                sourceforge:wine \
                             http://ibiblio.org/pub/linux/system/emulators/wine/
 
 checksums                   ${wine_distfile} \
-                    	    md5     05cc63418e603f3d689bcaa7c7768d01 \
-    			    sha1    aca42cac98e4f09b6b44a2672115e38e2ac3283d \
-                    	    rmd160  76ccc7610da8fc5023f1736fd92a34c4546ab5e5 \
+                            md5     f266536a8096f6b705f2f802549dc0e5 \
+                            sha1    955c8cbf6fe85de179e9b6c8bea9940363166e51 \
+                            rmd160  6ce5c89179f211e74e19dfab57f5a999ca225369 \
                             ${wine_gecko_distfile} \
                             md5     9c5c335fc077c0558561afaf25a09e51 \
                             sha1    afa22c52bca4ca77dcb9edb3c9936eb23793de01 \
