--- a/dports/x11/freefont-ttf/Portfile
+++ b/dports/x11/freefont-ttf/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 name            freefont-ttf
 version         20060126
+revision        1
 categories      x11 fonts
 maintainers     takeshi
 description     Free UCS Outline Fonts
@@ -22,6 +23,7 @@ post-extract {
     }
 }
 use_configure   no
+supported_archs noarch
 build       {}
 destroot {
     set fontdir ${destroot}${prefix}/share/fonts/${name}
