py25-coverage: update to 3.3.1; see #25725
git-svn-id: https://svn.macports.org/repository/macports/trunk@70167 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-coverage/Portfile
+++ b/dports/python/py25-coverage/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python25 1.0
 
 name                py25-coverage
-version             3.0.1
+version             3.3.1
 categories-append   devel
 platforms           darwin
 maintainers         nomaintainer
@@ -18,13 +18,23 @@ long_description    Coverage.py is a Python module that measures code \
                     version was written by Gareth Rees. I've updated it to \
                     determine executable statements more accurately.
 
-homepage            http://nedbatchelder.com/code/modules/coverage.html
+homepage            http://nedbatchelder.com/code/coverage/
 master_sites        http://pypi.python.org/packages/source/c/coverage/
 distname            coverage-${version}
 
-checksums           md5 b299c33b169bd796a6186a1f0f42a7da \
-                    sha1 17403e47a52481ee3950ecb33fedb8887e5ea030 \
-                    rmd160 00b921492921eb57ff970ff7898b05f137f10a4a
+depends_lib-append  port:py25-distribute
+
+checksums           md5     6f5a25ce06baad03ab293990f3a98bb7 \
+                    sha1    56b30e982c618c34c1ba7d97a19ae48716b1c51d \
+                    rmd160  25b43c2e9286576a41c8cd0d86fa0b0bf4d0c26d
+
+post-patch {
+    # Permissions in the archive are 700
+    # Set directories to 755, *.py to 755, other files to 644
+    system "find ${worksrcpath} -type d -exec chmod 755 {} \\;"
+    system "find ${worksrcpath} -type f -name '*.py' -exec chmod 775 {} \\;"
+    system "find ${worksrcpath} -type f -not -name '*.py' -exec chmod 644 {} \\;"
+}
 
 livecheck.type      regex
 livecheck.url       http://pypi.python.org/pypi/coverage
