enblend: update to 4.0; see #25744
git-svn-id: https://svn.macports.org/repository/macports/trunk@70169 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/enblend/Portfile
+++ b/dports/graphics/enblend/Portfile
@@ -3,9 +3,9 @@
 PortSystem 1.0
 
 name            enblend
-version         3.2
+version         4.0
 categories      graphics
-maintainers     nomaintainer
+maintainers     gmail.com:hvdwolf
 description     a tool to composite images
 long_description    Enblend is a tool to composite overlapping images \
                 with invisible (or very difficult to see) seams. Enfuse is a \
@@ -14,31 +14,34 @@ homepage        http://enblend.sourceforge.net/
 platforms       darwin
 master_sites    sourceforge:${name}
 distname        enblend-enfuse-${version}
-checksums       md5 9b6ebaf672f5103c633a53c9723d99c3 \
-                sha1 e44226ec6759dd3e6dcf46bb34848b64536ad495 \
-                rmd160 7a9b0037b821ac287327477d52665372d0850dbb
+worksrcdir      ${distname}-753b534c819d
+checksums       md5     2e7c950061e0085fd75d94576130250f \
+                sha1    34c3a5ce11c6ef0ef520d8a15a3cb6a94a567033 \
+                rmd160  9e531b5bf6f7258ef8778c01b456979e0bc04338
 
 depends_lib     port:boost \
                 port:lcms \
                 port:libpng \
                 port:libxmi \
                 port:mesa \
-                port:openexr
+                port:openexr \
+                port:freefont-ttf
 
 configure.args  --mandir=${prefix}/share/man \
-                --enable-image-cache=yes
+                --enable-image-cache=yes \
+                --enable-split-doc=no
 
 post-destroot {
     xinstall -d -m 755 ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} AUTHORS ChangeLog COPYING \
-        NEWS README TODO VIGRA_LICENSE \
+        NEWS README VIGRA_LICENSE \
         ${destroot}${prefix}/share/doc/${name}
 }
 
 platform macosx {
     depends_lib-delete port:mesa
     depends_lib-append port:glew
-    configure.args-append --with-apple-opengl-framework
+    configure.args-append --with-apple-opengl-framework --with-glew
 }
 
 livecheck.regex   {(?i)<title>enblend-enfuse enblend-enfuse-(.*) released.*</title>}
