--- a/dports/python/py25-pyobjc-cocoa/Portfile
+++ b/dports/python/py25-pyobjc-cocoa/Portfile
@@ -32,6 +32,5 @@ post-destroot {
     copy ${worksrcpath}/Doc ${destroot}${prefix}/share/doc/${name}
 }
 
-livecheck.type  regex
-livecheck.url   http://pypi.python.org/pypi/pyobjc-framework-Cocoa/
-livecheck.regex {pyobjc-framework-Cocoa ([0-9.]+)}
+# 2.3 only supports python >= 2.6
+livecheck.type  none
