--- a/dports/python/py25-pyobjc/Portfile
+++ b/dports/python/py25-pyobjc/Portfile
@@ -41,6 +41,5 @@ post-destroot {
         ${destroot}${prefix}/share/doc/${name}/examples
 }
 
-livecheck.type  regex
-livecheck.url   http://pypi.python.org/pypi/pyobjc-core/
-livecheck.regex {pyobjc-core ([0-9.]+)}
+# 2.3 only supports python >= 2.6
+livecheck.type  none
