archivers/p7zip: Also install 7z and 7zr
git-svn-id: https://svn.macports.org/repository/macports/trunk@70176 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/p7zip/Portfile
+++ b/dports/archivers/p7zip/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            p7zip
 version         9.13
+revision        1
 categories      archivers
 maintainers     nomaintainer
 platforms       darwin
@@ -37,6 +38,9 @@ configure {
             ${worksrcpath}/makefile.machine
     }
 }
+
+# build 7za, 7z and 7zr
+build.target all3
 
 use_parallel_build	yes
 
