ffmpeg: Allow speex-devel to satisfy the requirement for speex support.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70178 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -68,7 +68,7 @@ depends_lib     port:lame \
                 port:schroedinger \
                 port:faac \
                 port:faad2 \
-                port:speex \
+                path:lib/libspeex.dylib:speex \
                 port:XviD \
                 port:x264 \
                 path:lib/pkgconfig/sdl.pc:libsdl \
