--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -85,6 +85,7 @@ minimum_xcodeversions {9 3.1}
 
 configure.cflags-append    -DHAVE_LRINTF ${configure.cppflags}
 configure.args \
+        --disable-doc \
         --enable-gpl \
         --enable-postproc \
         --enable-swscale --enable-avfilter --enable-avfilter-lavf \
