liblastfm: disable parallel build; see #25887
git-svn-id: https://svn.macports.org/repository/macports/trunk@70181 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/liblastfm/Portfile
+++ b/dports/audio/liblastfm/Portfile
@@ -48,6 +48,8 @@ post-configure {
     }
 }
 
+use_parallel_build  no
+
 build.env           PATH=${qtdir}/bin:$env(PATH)
 
 # fix build failure on Snow Leopard
